--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,20 @@
-!!!
+doctype html
 html
   head
     title= title
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css')
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body!= body
+  body
+    div(class='navbar navbar-default navbar-fixed-top')
+      .container
+        .navbar-header
+          a(class="navbar-brand" href="/")
+            img(src='/images/brand-hdr.png')
+        h3 The Internet of Things (IoT) Starts with Intel Inside®
+    != body
+    script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js')
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js')
+    script(src='https://cdn.socket.io/socket.io-1.3.5.js')
+    script(src='/javascripts/global.js')
+
