--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,10 +4,11 @@
 .navbar{margin-bottom:22px;border:1px solid transparent;border-bottom:3px solid rgba(0,80,146,0.75)}
 .container-fluid{background-color:#0071c5;border-color:#005ea4;}
 .container{background-color:#0071c5;border-color:#005ea4;background-clip:content-box;padding:5px}
-.text{color:#fff;font:tahoma;}                                                          
-.btn{background-color:#00aeef;padding:4px 12px; border-radius:3px;}                     
-.btn:hover{background-color:#004280; color:#fff;}                                       
-.btn:focus{color:#fff;}                                                                 
-p{color:#fff;font:tahoma;}                                                              
+.text{color:#fff;font:tahoma;}
+.btn{background-color:#00aeef;padding:4px 12px; border-radius:3px;}
+.btn:hover{background-color:#004280; color:#fff;}
+.btn:focus{color:#fff;}
+.panel-heading{background-image:none;background-color:#0071c5;border:1px solid transparent;border-bottom:2px solid rgba(0,80,146,0.55)}
+p{color:#fff;font:tahoma;}
 h1{color:#fff;font-family:'intel-clear',tahoma,Helvetica,Arial,sans-serif;}
 body{background-color:#0f5fa7;color:#fff;padding-top:70px;}
