--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,6 +4,10 @@
 .navbar{margin-bottom:22px;border:1px solid transparent;border-bottom:3px solid rgba(0,80,146,0.75)}
 .container-fluid{background-color:#0071c5;border-color:#005ea4;}
 .container{background-color:#0071c5;border-color:#005ea4;background-clip:content-box;padding:5px}
+.tile-left{background-color:#0071c5;border-color:#005ea4;background-clip:content-box;padding:5px;float:left;}
+.tile-right{float:right}
+.spacer-left{padding-left:50px;}
+.spacer-right{padding-right:50px;}
 .text{color:#fff;font:tahoma;}
 .btn{background-color:#00aeef;padding:4px 12px; border-radius:3px;}
 .btn:hover{background-color:#004280; color:#fff;}
