Fixes to style sheet. Tested with multiple devices

--- a/views/index.jade
+++ b/views/index.jade
@@ -5,8 +5,8 @@
   .tile-left
     div(style='margin:auto' align='center')
       button(align='center' style='width:125px;' id='scanButton' class='btn' onclick='scanForDevices("device_table");') Start Scan
-    table(class='table' id='device_table' align='center')
-      tbody
+    div(id='device_table' align='center')
+
   div(class='tile-left spacer-left')
   .tile-left
     div(class='row')
