Creating device class which can has its own watchdog

--- a/views/index.jade
+++ b/views/index.jade
@@ -38,18 +38,25 @@
             #humidityLabel
       .col-sm-6
         .row
-          .col-sm-5
-            p Gyroscope:
+          .col-sm-4
+            p Gyroscope: 
+          .col-sm-1
+            .spacer-left
           .col-sm-1
             #gyroLabel
         .row
-          .col-sm-5
-            p Accelerometer:
+          .col-sm-4
+            p Accelerometer: 
+          .col-sm-1
+            .spacer-left
           .col-sm-1
             #accelLabel
         .row
-          .col-sm-5
-            p Magnetometer:
+          .col-sm-4
+            p Magnetometer: 
+          .col-sm-1
+            .spacer-left
           .col-sm-1
             #magLabel
-  
+
+
