--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,8 +4,8 @@ html
     title= title
     //link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css')
     //link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css')
-    link(rel='stylesheet', href='/stylesheets/bootstrap-theme.min.css')
-    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
+    link(rel='stylesheet', href='/stylesheets/local_stash/bootstrap-theme.min.css')
+    link(rel='stylesheet', href='/stylesheets/local_stash/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     div(class='navbar navbar-default navbar-fixed-top')
@@ -17,9 +17,17 @@ html
     != body
     //script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js')
     //script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js')
+    //script(src='http://code.highcharts.com/highcharts.js')
+    //script(src='http://code.highcharts.com/modules/exporting.js')
     //script(src='https://cdn.socket.io/socket.io-1.3.5.js')
-    script(src='/javascripts/jquery.min.js')
-    script(src='/javascripts/bootstrap.min.js')
-    script(src='/javascripts/socket.io-1.3.5.js')
+    //script(src='https://ajax.googleapis.com/ajax/libs/threejs/r69/three.min.js')
+    script(src='/javascripts/local_stash/jquery.min.js')
+    script(src='/javascripts/local_stash/bootstrap.min.js')
+    script(src='/javascripts/local_stash/socket.io-1.3.5.js')
+    script(src='/javascripts/local_stash/highcharts.js')
+    script(src='/javascripts/local_stash/exporting.js')
+    script(src='/javascripts/local_stash/three.min.js')
+    script(src='/javascripts/charts.js')
+    script(src='/javascripts/draw3d.js')
     script(src='/javascripts/global.js')
 
