--- a/views/layout.jade
+++ b/views/layout.jade
@@ -30,4 +30,5 @@ html
     script(src='/javascripts/charts.js')
     script(src='/javascripts/draw3d.js')
     script(src='/javascripts/global.js')
+    script(src='/javascripts/cloud.js')
 
