--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,17 +2,27 @@
 .navbar-default{background-color:#0071c5;border-color:#005ea4;background-image:none;}
 .navbar-fixed-top{background-color:#0071c5;border-color:#005ea4;}
 .navbar{margin-bottom:22px;border:1px solid transparent;border-bottom:3px solid rgba(0,80,146,0.75)}
-.container-fluid{background-color:#0071c5;border-color:#005ea4;}
-.container{background-color:#0071c5;border-color:#005ea4;background-clip:content-box;padding:5px}
+.container-fluid{background-color:#0071c5;}
+.container{background-color:#0071c5;background-clip:content-box;padding:5px;}
 .tile-left{background-color:#0071c5;border-color:#005ea4;background-clip:content-box;padding:5px;float:left;}
 .tile-right{float:right}
 .spacer-left{padding-left:50px;}
 .spacer-right{padding-right:50px;}
-.text{color:#fff;font:tahoma;}
+.box-1p{padding:1px 5px;}
+.box-5p{padding:5px 10px;}
+.text{color:#fff;font:tahoma;padding:5px 7px;}
 .btn{background-color:#00aeef;padding:4px 12px; border-radius:3px;}
 .btn:hover{background-color:#004280; color:#fff;}
 .btn:focus{color:#fff;}
+th, td {
+  padding: 1px 15px;
+}
+input{color:#333;}
 .panel-heading{background-image:none;background-color:#0071c5;border:1px solid transparent;border-bottom:2px solid rgba(0,80,146,0.55)}
+.nav-tabs>li>a{color:rgb(200,200,200);background-color:#0071c5;border-bottom:1px solid #0f5fa7;}
+.nav-tabs>li>a:focus,.nav-tabs>li>a:hover{color:rgb(225,225,225);background-color:#0071c5;border-color:#0f5fa7;outline:none;}
+.nav-tabs>li.active>a,.nav-tabs>li.active>a:hover,.nav-tabs>li.active>a:focus{border-color:#0f5fa7;color:rgb(255,255,255);background-color:#0071c5;border-bottom:1px solid transparent;outline:none;}
+.nav-tabs{border-bottom:1px solid #0f5fa7;}
 p{color:#fff;font:tahoma;}
 h1{color:#fff;font-family:'intel-clear',tahoma,Helvetica,Arial,sans-serif;}
 body{background-color:#0f5fa7;color:#fff;padding-top:70px;}
